Updated the epydoc config to generate all inherited information in a class function list so when a user looks at the doc they will know everything that is available to the class.

--- a/epydoc.config
+++ b/epydoc.config
@@ -52,7 +52,7 @@ introspect: yes
 
 # The format for showing inheritance objects.
 # It should be one of: 'grouped', 'listed', 'included'.
-inheritance: listed
+inheritance: included
 
 # Whether or not to inclue private variables.  (Even if included,
 # private variables will be hidden by default.)
